verif/test/deca/context/invalid/assign/type-not-declared-verif.res
src/test/deca/context/invalid/assign/type-not-declared.deca:9:4: 'x' does not exist in current context of expressions
